# tasktracker

./: .gitignore  README.md  pyproject.toml
code/: main.py  storage.py  tasks.py
code/tasktracker/: __init__.py  cli.py  storage.py  tasks.py
data/: tasks.json
task_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasktracker/: cli.py  tasks.py
