[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker"
version = "0.1.0"
description = "A simple task tracking application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Suyog", email = "pokhrels477@gmail.com" },
]
keywords = ["tasks", "todo", "tracker"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.scripts]
tracker = "tasktracker.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "isort",
  "mypy",
  "flake8",
]

[tool.setuptools.packages.find]
where = [""]
include = ["tasktracker*"]
